fix height overflow

--- a/style.css
+++ b/style.css
@@ -9,9 +9,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 400px;
+  padding: 150px;
+  margin: 20px;
 }
 
+.bodyBox{
+  display: flex;
+  flex-direction: column;
+}
 .container {
+  /* flex-grow: 1; */
   display:flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -38,8 +46,6 @@ button {
 /* need to find a better width solution than the one below for grids with different numbers of boxes */
 /* maybe create a variable that sets width % to 100/the entered number */
 .gridBox {
-  /* width: 10%;
-  padding-top: 10%; */
   border: black 1px solid;
 }
 
